# kupo-py

./: .bumpversion.cfg  .pre-commit-config.yaml  404.html  README.md  gen_models.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  sample.env
.github/workflows/: docs.yml  publish.yml
api/client/: index.html
api/models/: index.html
docs/: examples.md  installation.md
docs/api/: client.md  models.md
docs/stylesheets/: extra.css
examples/: index.html
installation/: index.html
search/: search_index.json
src/kupo/: __init__.py  client.py  models.py  utils.py
tests/: conftest.py  test_get_matches.py  test_get_patterns.py
