[project]
name = "kupo-py"
version = "0.0.2"
description = "A Cardano Kupo client for Python."
readme = "README.md"
authors = [
    { name = "Elder Millenial", email = "eldermillenial@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp[speedups]>=3.11.10",
    "bump-my-version>=0.28.1",
    "bump2version>=1.0.1",
    "pycardano>=0.11.1",
    "pydantic>=2.10.3",
    "python-dotenv==0.21.1",
    "requests>=2.32.3",
    "setuptools>=75.6.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "datamodel-code-generator[http]>=0.26.3",
    "mypy>=1.13.0",
    "nox>=2024.10.9",
    "pre-commit>=4.0.1",
    "pytest-benchmark>=5.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.3",
    "charli3-dendrite>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kupo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version = "0.1.0-dev1"
parse = """(?x)
    (?P<major>\\d+)\\.
    (?P<minor>\\d+)\\.
    (?P<patch>\\d+)
    (\\-(?P<release>[a-z]+)(?P<dev>\\d+))?
"""
serialize = [
	"{major}.{minor}.{patch}-{release}{dev}",
	"{major}.{minor}.{patch}",
]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = "--no-verify"

[tool.bumpversion.parts.release]
values = ["dev", "release"]
optional_value = "release"
